--- a/trunk/GoCoWi-previewer.html
+++ b/trunk/GoCoWi-previewer.html
@@ -270,9 +270,11 @@
     <option>--Select Project--</option>
     <option>v8</option>
     <option>v8-juice</option>
+    <option>v8cgi</option>
     <option>qboard</option>
     <option>whefs</option>
     <option>wikiwym</option>
+    <option>cproxyv8</option>
     </select>
     <!--
     <input type='button' id='LoadProjectButton' onclick='loadProjectList();return false;' value='Load page list.'></input>
@@ -333,8 +335,8 @@ This app was written by [http://wanderinghorse.net/home/stephan/ Stephan Beal] w
   * A history list of pages/projects visits this session, to allow faster swapping between them.
   * Ability to load a specific version of a wiki page.
 
-All of that is simple enough to do, but as of this moment i've been awake 24 hours and hacking the last 18 of them, and i'm
-too tired to deal with it.
+All of that is simple enough to do, but as of this moment i've been awake 25 hours and hacking on this code the last 19 of them, and i'm
+too tired to deal with new "nice-to-have" features.
 </div>
 <span id='ajaxNotification'></span>
 <!--
