Added more test/demo text.

--- a/index-jquery.html
+++ b/index-jquery.html
@@ -70,9 +70,15 @@ Intentional errors:
   * unterminated ^sup
   * mis-terminated ,,sub,
   * unterminated ,,sub
+  * [UnterminatedLink
 
 (If those are NOT _all_ marked with errors, something is broken.)
 
+*Happy Hacking!*
+
+-- [http://wanderinghorse.net/home/stephan/ stephan beal]
+
+[http://wanderinghorse.net/home/stephan/ http://wanderinghorse.net/home/stephan/stephan_beal_sylt_072006_small.jpg]
 </textarea>
      </td>
 		 <td id="wikicontent" class="layout"></td>
