--- a/trunk/GoCoWi-previewer.html
+++ b/trunk/GoCoWi-previewer.html
@@ -115,8 +115,9 @@
             {
                 // obligatory layout kludge:
                 var wid = jQuery('#layout').width() || jQuery('body').width() || 800;
+                var ht =  ThisApp.preview.height() || jQuery('body').height() || 800;
                 wid = (wid-(wid/25))/2;
-                ThisApp.textarea.css({width:wid});
+                ThisApp.textarea.css({width:wid, height:ht});
                 //ThisApp.preview.css({width:wid});
             }
             /**
