moved prettify into its own dir. Now loads prototype from googleapis.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -12,8 +12,8 @@
   <script src='lib/jsdifflib//difflib.js' type='text/javascript'></script>
   <link type="text/css" rel="stylesheet" href="GoCoWi-previewer.css" />
   <script src="lib/GoogleCodeWikiParser.js" type="text/javascript"></script>
-  <link href="lib/prettify.css" type="text/css" rel="stylesheet" />
-  <script type="text/javascript" src="lib/prettify.js"></script>
+  <link href="lib/prettify/prettify.css" type="text/css" rel="stylesheet" />
+  <script type="text/javascript" src="lib/prettify/prettify.js"></script>
   <style type='text/css'>
     #ajaxNotification {
         position:absolute;
