--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Google Code wiki syntax editor</title>
   <script src="lib/GoogleCodeWikiParser.js" type="text/javascript"></script>
-  <script src="lib/prototype.js" type="text/javascript"></script>
+  <script src='http://ajax.googleapis.com/ajax/libs/prototype/1.6.1.0/prototype.js' type='text/javascript'></script>
   <script src="lib/parser.js" type="text/javascript"></script>
   <script type="text/javascript">
     window.onload = function(){
