added yapeal to quick-load list.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -319,6 +319,7 @@
     <option>v8</option>
     <option>v8-juice</option>
     <option>v8cgi</option>
+    <option>yapeal</option>
     <option>qboard</option>
     <option>whefs</option>
     <option>wikiwym</option>
