--- a/trunk/GoCoWi-previewer.html
+++ b/trunk/GoCoWi-previewer.html
@@ -364,6 +364,9 @@ In the text field at the top of the screen you can enter the name of a project h
 [http://code.google.com Google Code] to load the list of wiki pages for that project
 (taken from their SVN repository). Then click on a page name to preview it here.
 
+You can edit the wiki markup. Changes made will be updates in the preview/diff view
+when you tap Enter or click the Update button.
+
 
 =About this Application=
 This app was written by [http://wanderinghorse.net/home/stephan/ Stephan Beal] with a little help from:
