--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -3,28 +3,30 @@
 <html>
 <head>
   <title>Google Code wiki syntax editor</title>
-  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js' type='text/javascript'></script>
-    <script src='lib/jsdifflib//difflib.js' type='text/javascript'></script>
-    <script src='lib/jsdifflib//diffview.js' type='text/javascript'></script>
-    <link href='lib/jsdifflib//diffview.css' rel='stylesheet' type='text/css'></script>
-  <script src='lib/JSONMessage/JSONMessage.js.php' type='text/javascript'></script>
-  
-  <script src='lib/jsdifflib//difflib.js' type='text/javascript'></script>
-  <link type="text/css" rel="stylesheet" href="GoCoWi-previewer.css" />
-  <script src="lib/GoogleCodeWikiParser.js" type="text/javascript"></script>
-  <link href="lib/prettify/prettify.css" type="text/css" rel="stylesheet" />
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+	
+  <script type="text/javascript" src="lib/jsdifflib/difflib.js"></script>
+  <script type="text/javascript" src="lib/jsdifflib/diffview.js"></script>
+  <script type="text/javascript" src="lib/JSONMessage/JSONMessage.js.php"></script>
   <script type="text/javascript" src="lib/prettify/prettify.js"></script>
-  <style type='text/css'>
+  <script type="text/javascript" src="lib/GoogleCodeWikiParser.js"></script>
+  
+  <link type="text/css" href="lib/jsdifflib/diffview.css" rel="stylesheet" />
+  <link type="text/css" href="lib/prettify/prettify.css" rel="stylesheet" />
+  <link type="text/css" href="GoCoWi-previewer.css" rel="stylesheet" />
+	
+  <style type="text/css">
     #ajaxNotification {
-        position:absolute;
-        top:0;
-        left:0;
-        border: 1px inset black;
-        background-color:#773333;
-        color:white;
-        opacity:0.75;
+      position:absolute;
+      top:0;
+      left:0;
+      border: 1px inset black;
+      background-color:#773333;
+      color:white;
+      opacity:0.75;
     }
   </style>
+	
   <script type="text/javascript">
     var ThisApp = {
         gcwp:null,
@@ -334,12 +336,12 @@
   </tr>
   <tr>
     <td align='left'>
-        <input type='button' onclick="goHome();return false;" value="Home"></input>
-        <span class='container' title='Note that warnings may be caused by some malformed wiki code or bugs in this parser.'>Disable parser warnings? <input type='checkbox' id='optionEnableWarnings' /></span>
-        <span class='container' title='Switch between preview and diff modes.'>Diff mode?<input type='checkbox' id='optionDiffMode' /></span>
+      <button onclick="goHome()">Home</button>
+      <span class='container' title='Note that warnings may be caused by some malformed wiki code or bugs in this parser.'>Disable parser warnings? <input type='checkbox' id='optionEnableWarnings' /></span>
+      <span class='container' title='Switch between preview and diff modes.'>Diff mode?<input type='checkbox' id='optionDiffMode' /></span>
     </td>
     <td align='left'>
-        <input type='button' onclick="updateView();return false;" value="Update Preview"></input>
+      <button onclick="updateView()">Update Preview</button>
     </td>
   </tr>
   <tr><th>Google Code-style Wiki Markup</th><th>HTML</th></tr>
