Added project 'beup' to the drop-down list.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -318,6 +318,7 @@
     Google Code project name: <input type='text' id='GoCoProjectName' cols='40' value='wikiwym'/>
     or: <select id='SelectProject'>
     <option>--Select Project--</option>
+    <option>beup<option>
     <option>v8</option>
     <option>v8-juice</option>
     <option>v8cgi</option>
@@ -341,7 +342,8 @@
       <span class='container' title='Switch between preview and diff modes.'>Diff mode?<input type='checkbox' id='optionDiffMode' /></span>
     </td>
     <td align='left'>
-      <button onclick="updateView()">Update Preview</button>
+      <button onclick="updateView()">Update Preview</button> <span style='text-size:80%'>(Also use this to re-layout
+      the views if you resize your browser window.)</span>
     </td>
   </tr>
   <tr><th>Google Code-style Wiki Markup</th><th>HTML</th></tr>
